@@ -1,4 +1,6 @@
-$NetBSD: distinfo,v 1.2 2001/04/20 10:49:55 agc Exp $
+$NetBSD: distinfo,v 1.3 2002/08/13 03:06:10 jdarrow Exp $
 
+SHA1 (compat14-i386-1.4.3.1.tar.gz) = 7c00ede3cf18bfc437e9262f0e583bde5f134004
+Size (compat14-i386-1.4.3.1.tar.gz) = 1646083 bytes
 SHA1 (compat14-sparc-1.4.3.1.tar.gz) = 9c0e46ced11f1f56fde79158edebb12898ea4ffa
 Size (compat14-sparc-1.4.3.1.tar.gz) = 1831758 bytes
