@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 23:53:06 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.1.1.1 2002/11/08 16:23:02 mrg Exp $
 ${COMPAT_EMULSUBDIR}/usr/lib/libamu.so.2
 ${COMPAT_EMULSUBDIR}/usr/lib/libamu.so.2.1
 ${COMPAT_EMULSUBDIR}/usr/lib/libasn1.so.6
@@ -105,31 +105,5 @@ ${COMPAT_EMULSUBDIR}/usr/lib/libwrap.so.0
 ${COMPAT_EMULSUBDIR}/usr/lib/libwrap.so.0.2
 ${COMPAT_EMULSUBDIR}/usr/lib/libz.so.0
 ${COMPAT_EMULSUBDIR}/usr/lib/libz.so.0.2
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libICE.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libICE.so.6.3
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libPEX5.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libPEX5.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libSM.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libSM.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libX11.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libX11.so.6.1
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXIE.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXIE.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXaw.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXaw.so.6.1
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXext.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXext.so.6.3
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXi.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXi.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXmu.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXmu.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXp.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXp.so.6.2
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXt.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXt.so.6.0
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXtst.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/libXtst.so.6.1
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/liboldX.so.6
-${COMPAT_EMULSUBDIR}/usr/X11R6/lib/liboldX.so.6.0
 ${COMPAT_EMULSUBDIR}/usr/libexec/ld.elf_so
 ${COMPAT_EMULSUBDIR}/usr/libexec/ld.so
